tests/errors/003-typechecking/002-undeclared-identifier/002-in-function-call.xxx
fn := (i : int) => { }

x := fn(undef)
